--- a/index.html
+++ b/index.html
@@ -2,21 +2,25 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Snake</title>
-    <link rel="stylesheet" href="./style.css">
-    <script defer src="./snake.js"></script>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Snake</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="./style.css">
+  <script defer src="./snake.js"></script>
 </head>
 
 <body>
-    <div class="rules">press R to restart the game</div>
-    <canvas id="board"></canvas>
-    <div class="score">
-        Score:
-        <p class="score__quanity">0</p>
-    </div>
+  <div class="rules">Press R to restart the game</div>
+  <canvas id="board"></canvas>
+  <div class="score">
+    Score:
+    <p class="score__quantity">0</p>
+  </div>
 </body>
 
 </html>
