--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div class="rules">Press R to restart the game</div>
   <canvas id="board"></canvas>
   <div class="score">
-    Score:
+    Score
     <p class="score__quantity">0</p>
   </div>
 </body>
